# ProtocolCreator

./: .replit  Pasted--File-structure-and-integration-guide-1-Create-new-directory-structure-project-root-uti-1730456768263.txt  Pasted--Phase-2-Clinical-Trial-phase2-title-Generate-a-clear-and-descriptive-s-1730906809486.txt  Pasted-Areas-Needing-Enhancement-Statistical-Analysis-Section-Priority-High-markdownCopy-Current-Issu-1730916682256.txt  Pasted-Let-s-modify-the-setup-custom-styles-method-to-check-if-styles-exist-first-pythonCopydef-setup-cust-1730310182796.txt  complete-protocol-prompts.md  comprehensive-protocol-validator.py  comprehensive-study-configs.py  diagram_0  enhanced-protocol-prompts.md  fixed-editor-button.py  fixed-navigator-button.py  formatting-export-specification.md  key-validation-dimensions.py  main-debug.py  main.py  prompt-enhancement.md  protocol (54).docx  protocol (7).docx  protocol-app-prompt-analysis.md  protocol-from-synopsis-app.md  protocol-improver.py  protocol-post-processor.py  protocol-prompts-system.md  protocol-quality-ui.py  protocol.docx  pyproject.toml  replit.nix  requirements.txt  script-alignment.md  synopsis-storage-fix.py  unified-protocol-validator.py  validation-rules.py  validator-improvements (1).md
components/: compliance_checker.py  editor.py  input_section.py  navigator.py
config/: section_prompts.py  study_type_definitions.py  validation_rules.py
prompts/: analysis_prompts.py  section_prompts.py  section_templates.py
temp/: protocol.docx
utils/: file_processor.py  gpt_handler.py  mermaid_helper.py  (+10 more)
(+12 files in other folders)
