[project]
name = "repl-nix-studyprotocolcreator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2pdf>=0.1.8",
    "jsonschema>=4.23.0",
    "openai>=1.52.2",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "streamlit>=1.39.0",
]
