[project]
name = "repl-nix-studyprotocolcreator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "docx2pdf>=0.1.8",
    "fpdf2>=2.8.1",
    "graphviz>=0.20.3",
    "html5lib>=1.1",
    "jsonschema>=4.23.0",
    "openai>=1.52.2",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "reportlab>=4.2.5",
    "streamlit-mermaid>=0.2.0",
    "streamlit>=1.39.0",
]
